streamlit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit-app
  template:
    metadata:
      labels:
        app: streamlit-app
    spec:
      containers:
      - name: streamlit
        image: 08474/kubernetes-app:latest   # <-- your Docker Hub image
        imagePullPolicy: Always
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
spec:
  type: NodePort
  selector:
    app: streamlit-app
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
      nodePort: 30001   # access externally via this port
